# AGENTS

./: .gitignore  .skill-lock.json  .skills.yaml  AGENTS.md  AICLI.md  README.md  REF.md  manager.py  pyproject.toml  skill.py
.agents/: AGENTS.md
.agents/docs/: personal-skill-management-workflow.md
prompts/: AGENTS.global.md  agents.global.md  agents.md
prompts/samples/ThreeFiles/: Rule.md
samples/ThreeFiles/: PRD.md  README.md  Tasks.md
skills-mine/my-subagent-driven-development/: SKILL.md
skills/brainstorming/: SKILL.md
skills/executing-plans/: SKILL.md
skills/feature-planner/: README.md  SKILL.md
skills/finishing-a-development-branch/: .commit  SKILL.md
skills/microsoft-foundry/: SKILL.md
skills/my-code-review/: SKILL.md
skills/my-coding-guidelines/: SKILL.md
skills/my-git-commit/: SKILL.md
skills/my-models/: SKILL.md
skills/my-new-session/: SKILL.md
skills/my-skill-creator/: SKILL.md
skills/my-skill-updater/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/skill-creator/: .commit
skills/subagent-driven-development/: SKILL.md  implementer-prompt.md
skills/user/brainstorming/: spec-document-reviewer-prompt.md
skills/user/caveman/: SKILL.md
skills/writing-plans/: SKILL.md
tests/: test_skill.py
