[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruamel.yaml>=0.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = [
    ".git",
    ".skills-repos",
    "skills-library",
]

[project.scripts]
sync = "manager:main"
library = "manager:main"
workspace = "manager:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["manager"]




